--- a/pom.xml
+++ b/pom.xml
@@ -385,6 +385,7 @@
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
 		<maven-nexus-staging-plugin.version>1.6.8</maven-nexus-staging-plugin.version>
 		<lombok.version>1.18.12</lombok.version>
+		<commons-lang3.version>3.9</commons-lang3.version>
 		<pac4j.version>4.0.0</pac4j.version>
 		<sudytech-sdk.version>4.0.6.9</sudytech-sdk.version>
 		<servlet-api.version>4.0.1</servlet-api.version>
@@ -429,6 +430,13 @@
 		        <artifactId>javax.servlet-api</artifactId>
 		        <version>${servlet-api.version}</version>
 		    </dependency>
+		    
+			<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+			<dependency>
+			    <groupId>org.apache.commons</groupId>
+			    <artifactId>commons-lang3</artifactId>
+			    <version>${commons-lang3.version}</version>
+			</dependency>
 			 
 		</dependencies>
 	</dependencyManagement>
@@ -463,7 +471,10 @@
             <groupId>org.pac4j</groupId>
             <artifactId>pac4j-http</artifactId>
         </dependency>
-        
+        <dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		</dependency>
 	 	<dependency>
 		  	<groupId>com.sudytech</groupId>
 		  	<artifactId>sudytech-mids-mobile-api</artifactId>
